2006-10-11  David Kastrup  <dak@gnu.org>

	* tex-buf.el (TeX-error-description-list): Add preview-latex error
	pattern here.

	* tex.el (TeX-expand-list): Add "%m" pattern from preview.
	(TeX-add-local-master): Make a local variable wrapper more
	suitable for docstrip.

2006-10-10  David Kastrup  <dak@gnu.org>

	* RELEASE: Mention space in file names, PostScript stack
	tolerance.
	
	* tex-buf.el (TeX-command-expand): Make `file' self-quoting in
	expansion, and trick around with `TeX-command-pos' and other junk
	in order to make the quoting stuff of "%`" and "%'" work.
	(TeX-view-output-file): Became pretty pointless.  Remove.

	* tex.el (TeX-command-list): Use "%`" and "%'" magic to allow file
	names with spaces.
	(TeX-output-view-style): Don't quote "%s", that's the job of
	`TeX-command-expand'.
	(TeX-expand-list): Use the `-interaction' option.  Define "%`",
	" \"\\", "\"" and "%'" patterns.  Somebody should probably rather
	turn this into external functions in `tex-buf.el': the stuff
	really has no business here and does not get byte-compiled.  Use
	`file' for "%o".

2006-10-07  Ralf Angeli  <angeli@caeruleus.net>

	* latex.el (LaTeX-fill-region-as-paragraph): Match "foo\ %" as
	well.

2006-10-04  Ralf Angeli  <angeli@caeruleus.net>

	* tex.el (TeX-find-macro-boundaries): Prevent `up-list' and
	friends from finding parens in comments if point is not in a
	comment and vice versa.

2006-10-02  David Kastrup  <dak@gnu.org>

	* doc/auctex.texi: Change the licensing terms to require no front
	and back cover texts, and explicitly exclude the GFDL from being
	licensed under the GFDL.
	(top): Give a synopsis for the license section in the top menu.
	Remove redundant version mentions, remove the explicit exclusion
	of the GFDL from GFDL licensing: RMS says it is unnecessary.

2006-09-29  David Kastrup  <dak@gnu.org>

	* autogen.sh: Use `=' instead of `==' in tests.

	* doc/Makefile.in (version.texi): Let version.texi depend rather